--- a/MyReminder/Localization/uk.lproj/Localizable.strings
+++ b/MyReminder/Localization/uk.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 
 
 "title" = "назва";
+"body" = "Доповнення (не обов'язково)";
 "add_text_here" = "Введіть текст сюди";
 "priority" = "пріоритет";
 "date" = "дата";
