--- a/MyReminder/Localization/uk.lproj/Localizable.strings
+++ b/MyReminder/Localization/uk.lproj/Localizable.strings
@@ -17,6 +17,8 @@
 "edit" = "Змінити";
 
 
+"new_task" = "Нове завдання";
+"edit_task" = "Редагувати";
 "title" = "назва";
 "body" = "Доповнення (не обов'язково)";
 "add_text_here" = "Введіть текст сюди";
